2019-01-25  Devin Rousso  <drousso@apple.com>

        Web Inspector: REGRESSION (r237808): offscreen path warning doesn't work
        https://bugs.webkit.org/show_bug.cgi?id=193830

        Reviewed by Matt Baker.

        * UserInterface/Models/RecordingAction.js:
        (WI.RecordingAction.prototype.process):

2019-01-25  Joseph Pecoraro  <pecoraro@apple.com>

        Web Inspector: Add another Protocol Version (iOS 12.2)
        https://bugs.webkit.org/show_bug.cgi?id=193810
        <rdar://problem/42981838>

        Reviewed by Matt Baker.

        * UserInterface/Protocol/Legacy/12.2/InspectorBackendCommands.js: Added.
        * Versions/Inspector-iOS-12.2.json: Added.

2019-01-25  Devin Rousso  <drousso@apple.com>

        Web Inspector: `WI.Setting.migrateValue` doesn't take into account the key prefix
        https://bugs.webkit.org/show_bug.cgi?id=193814

        Reviewed by Matt Baker.

        * UserInterface/Base/Setting.js:
        (WI.Setting):
        (WI.Setting.migrateValue):
        (WI.Setting._localStorageKey): Added.

2019-01-25  Devin Rousso  <drousso@apple.com>

        Web Inspector: improve invalid Audit/Recording JSON error messages
        https://bugs.webkit.org/show_bug.cgi?id=193476
        <rdar://problem/47303659>

        Reviewed by Joseph Pecoraro.

        * UserInterface/Models/AuditTestBase.js:
        (WI.AuditTestBase):
        * UserInterface/Models/AuditTestCase.js:
        (WI.AuditTestCase.async fromPayload):
        * UserInterface/Models/AuditTestGroup.js:
        (WI.AuditTestGroup.async fromPayload):
        * UserInterface/Models/AuditTestCaseResult.js:
        (WI.AuditTestCaseResult.async fromPayload.checkArray):
        (WI.AuditTestCaseResult.async fromPayload):
        * UserInterface/Models/AuditTestGroupResult.js:
        (WI.AuditTestGroupResult.async fromPayload):
        * UserInterface/Controllers/AuditManager.js:
        (WI.AuditManager.synthesizeWarning): Added.